force-app/main/default/objects/AAR_License__c/AAR_License__c.object-meta.xml
<CustomObject>
    <label>Licensing Agreement</label>
    <nameField>
        <displayFormat>LIC-{0000}</displayFormat>
        <label>License Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Licensing Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>