force-app/main/default/objects/AAR_License__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <label>License Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Exclusive</fullName><default>false</default><label
        >Exclusive</label></value>
            <value><fullName>Non-Exclusive</fullName><default
        >false</default><label>Non-Exclusive</label></value>
            <value><fullName>Co-Exclusive</fullName><default
        >false</default><label>Co-Exclusive</label></value>
            <value><fullName>Option Agreement</fullName><default
        >false</default><label>Option Agreement</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>