force-app/main/default/objects/AAR_License__c/fields/Licensing_Party__c.field-meta.xml
<CustomField>
    <fullName>Licensing_Party__c</fullName>
    <label>Licensing Party</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>