force-app/main/default/objects/AAR_License__c/fields/TDC_Code__c.field-meta.xml
<CustomField>
    <fullName>TDC_Code__c</fullName>
    <label>TDC Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>